--- a/HTML-work/BioPageSite/BPstyles.css
+++ b/HTML-work/BioPageSite/BPstyles.css
@@ -35,6 +35,8 @@ body {
 p {
     border: 5px solid rgba(137, 43, 226, 0.548);
     padding: 10px;
+    font-size: medium;
+    
 }
 
 ul li{
@@ -42,6 +44,7 @@ ul li{
     padding: 5px;
     position: relative;
     width: 200px;
+    
 
 }
 
@@ -57,3 +60,15 @@ h5 {
 h6{
     font-size: larger;
 }
+
+img {
+    position:absolute;
+    right: 400px;
+    top: 220px;
+    width: 300px;
+    height: 200px;
+    border: 5px solid rgba(0, 0, 255, 0.267);
+}
+
+
+    
